--- a/BodyIndexBasics-Detection/MainWindow.xaml
+++ b/BodyIndexBasics-Detection/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Detection_2" 
-        Height="727.595" Width="1131.392" 
+        Height="727.595" Width="1355.792" 
         Closing="MainWindow_Closing">
     <Window.Resources>
         <SolidColorBrush x:Key="MediumGreyBrush" Color="#ff6e6e6e" />
@@ -25,45 +25,58 @@
 
 
 
-        <TextBox x:Name="statusTitleText" HorizontalAlignment="Left" Height="20" Margin="857,162,0,0" TextWrapping="Wrap" Text="Sensor Status:" VerticalAlignment="Top" Width="96" FontSize="10.667" TextAlignment="Center"/>
-        <TextBox x:Name="statusTextBox" HorizontalAlignment="Left" Height="20" Margin="953,162,0,0" TextWrapping="Wrap" Text="{Binding StatusText}" VerticalAlignment="Top" Width="131" />
+        <TextBox x:Name="statusTitleText" HorizontalAlignment="Left" Height="43" Margin="857,44,0,0" TextWrapping="Wrap" Text="Sensor Status:" VerticalAlignment="Top" Width="152" FontSize="22" TextAlignment="Center"/>
+        <TextBox x:Name="statusTextBox" HorizontalAlignment="Left" Height="43" Margin="1009,44,0,0" TextWrapping="Wrap" Text="{Binding StatusText}" VerticalAlignment="Top" Width="288" />
 
-        <TextBox x:Name="regionTitleText" HorizontalAlignment="Left" Height="43" Margin="857,182,0,0" TextWrapping="Wrap" Text="Region X-Y-Z:" VerticalAlignment="Top" Width="96" TextAlignment="Center" FontSize="10.667"/>
-        <TextBox x:Name="regionText" HorizontalAlignment="Left" Height="43" Margin="953,182,0,0" TextWrapping="Wrap" Text="{Binding XYZregion}" VerticalAlignment="Top" Width="131"/>
+        <TextBox x:Name="regionTitleText" HorizontalAlignment="Left" Height="88" Margin="857,87,0,0" TextWrapping="Wrap" Text="Region&#xD;&#xA; X-Y-Z:" VerticalAlignment="Top" Width="152" TextAlignment="Center" FontSize="24"/>
+        <TextBox x:Name="regionText" HorizontalAlignment="Left" Height="88" Margin="1009,87,0,0" TextWrapping="Wrap" Text="{Binding XYZregion}" VerticalAlignment="Top" Width="288"/>
 
-        <TextBox x:Name="sidewaysTitleText" HorizontalAlignment="Left" Height="16" Margin="857,225,0,0" TextWrapping="Wrap" Text="Sideways Movement:" VerticalAlignment="Top" Width="96" FontSize="9.333" TextAlignment="Center"/>
-        <TextBox x:Name="sidewaysText" HorizontalAlignment="Left" Height="16" Margin="953,225,0,0" TextWrapping="Wrap" Text="{Binding sidewaysMvmt}" VerticalAlignment="Top" Width="131"/>
+        <TextBox x:Name="sidewaysTitleText" HorizontalAlignment="Left" Height="55" Margin="857,175,0,0" TextWrapping="Wrap" Text="Sideways Movement:" VerticalAlignment="Top" Width="152" FontSize="17" TextAlignment="Center"/>
+        <TextBox x:Name="sidewaysText" HorizontalAlignment="Left" Height="55" Margin="1009,175,0,0" TextWrapping="Wrap" Text="{Binding sidewaysMvmt}" VerticalAlignment="Top" Width="288"/>
+        <Rectangle x:Name="rightToLeftRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="37" Margin="1026,188,0,0" VerticalAlignment="Top" Width="87" RenderTransformOrigin="1,1"/>
+        <Rectangle x:Name="noSidewaysRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="37" Margin="1113,188,0,0" VerticalAlignment="Top" Width="87" RenderTransformOrigin="1,1"/>
+        <Rectangle x:Name="leftToRightRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="37" Margin="1200,188,0,0" VerticalAlignment="Top" Width="87" RenderTransformOrigin="1,1"/>
 
-        <TextBox x:Name="upDownTitleText" HorizontalAlignment="Left" Height="34" Margin="857,241,0,0" TextWrapping="Wrap" Text="Vertical Movement:" VerticalAlignment="Top" Width="96" FontSize="9.333" TextAlignment="Center"/>
-        <TextBox x:Name="upDownText" HorizontalAlignment="Left" Height="34" Margin="953,241,0,0" TextWrapping="Wrap" Text="{Binding upDownMvmt}" VerticalAlignment="Top" Width="131"/>
+        <TextBox x:Name="upDownTitleText" HorizontalAlignment="Left" Height="68" Margin="857,230,0,0" TextWrapping="Wrap" Text="Vertical Movement:" VerticalAlignment="Top" Width="152" FontSize="24" TextAlignment="Center"/>
+        <TextBox x:Name="upDownText" HorizontalAlignment="Left" Height="68" Margin="1009,230,0,0" TextWrapping="Wrap" Text="{Binding upDownMvmt}" VerticalAlignment="Top" Width="288"/>
 
-        <TextBox x:Name="sweepTitleText" HorizontalAlignment="Left" Height="18" Margin="857,275,0,0" TextWrapping="Wrap" Text="Sweep:" VerticalAlignment="Top" Width="96" TextAlignment="Center" FontSize="10.667"/>
-        <TextBox x:Name="sweepText" HorizontalAlignment="Left" Height="18" Margin="953,275,0,0" TextWrapping="Wrap" Text="{Binding sweepMvmt}" VerticalAlignment="Top" Width="131"/>
+        <TextBox x:Name="sweepTitleText" HorizontalAlignment="Left" Height="38" Margin="857,298,0,0" TextWrapping="Wrap" Text="Sweep:" VerticalAlignment="Top" Width="152" TextAlignment="Center" FontSize="24"/>
+        <TextBox x:Name="sweepText" HorizontalAlignment="Left" Height="38" Margin="1009,298,0,0" TextWrapping="Wrap" Text="{Binding sweepMvmt}" VerticalAlignment="Top" Width="288"/>
 
-        <TextBox x:Name="rightHandTitleText" HorizontalAlignment="Left" Height="18" Margin="857,293,0,0" TextWrapping="Wrap" Text="Right Hand Gesture:" VerticalAlignment="Top" Width="96" FontSize="9.333" TextAlignment="Center"/>
-        <TextBox x:Name="rightHandText" HorizontalAlignment="Left" Height="18" Margin="953,293,0,0" TextWrapping="Wrap" Text="{Binding RightHandGestureText}" VerticalAlignment="Top" Width="131"/>
-        <Rectangle x:Name="rightHandOpenRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="12" Margin="958,296,0,0"  VerticalAlignment="Top" Width="19"/>
-        <Rectangle x:Name="rightHandClosedRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="12" Margin="977,296,0,0"  VerticalAlignment="Top" Width="19"/>
-        <Rectangle x:Name="rightHandLassoRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="12" Margin="996,296,0,0"  VerticalAlignment="Top" Width="19"/>
-        <Rectangle x:Name="rightHandUnknownRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="12" Margin="1015,296,0,0"  VerticalAlignment="Top" Width="19"/>
-        <Rectangle x:Name="rightHandNotTrackedRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="12" Margin="1035,296,0,0"  VerticalAlignment="Top" Width="19"/>
+        <TextBox x:Name="rightHandTitleText" HorizontalAlignment="Left" Height="54" Margin="857,336,0,0" TextWrapping="Wrap" Text="Right Hand Gesture" VerticalAlignment="Top" Width="152" FontSize="19" TextAlignment="Center"/>
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="54" Margin="1009,336,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="288"/>
 
-        <TextBox x:Name="leftHandTitleText" HorizontalAlignment="Left" Height="18" Margin="857,311,0,0" TextWrapping="Wrap" Text="Left Hand Gesture:" VerticalAlignment="Top" Width="96" FontSize="9.333" TextAlignment="Center"/>
-        <TextBox x:Name="leftHandText" HorizontalAlignment="Left" Height="18" Margin="953,311,0,0" TextWrapping="Wrap" Text="{Binding LeftHandGestureText}" VerticalAlignment="Top" Width="131"/>
-        <Rectangle x:Name="leftHandOpenRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="12" Margin="958,313,0,0" VerticalAlignment="Top" Width="19"/>
-        <Rectangle x:Name="leftHandClosedRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="12" Margin="977,313,0,0" VerticalAlignment="Top" Width="19"/>
-        <Rectangle x:Name="leftHandLassoRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="12" Margin="996,313,0,0"  VerticalAlignment="Top" Width="19"/>
-        <Rectangle x:Name="leftHandUnknownRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="12" Margin="1015,313,0,0"  VerticalAlignment="Top" Width="19"/>
-        <Rectangle x:Name="leftHandNotTrackedRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="12" Margin="1034,313,0,0"  VerticalAlignment="Top" Width="19"/>
+        <Rectangle x:Name="rightHandOpenRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="32" Margin="1038,344,0,0"  VerticalAlignment="Top" Width="50"/>
+        <Rectangle x:Name="rightHandClosedRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="32" Margin="1088,344,0,0"  VerticalAlignment="Top" Width="50"/>
+        <Rectangle x:Name="rightHandLassoRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="32" Margin="1138,344,0,0"  VerticalAlignment="Top" Width="50"/>
+        <Rectangle x:Name="rightHandUnknownRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="32" Margin="1188,344,0,0"  VerticalAlignment="Top" Width="50"/>
+        <Rectangle x:Name="rightHandNotTrackedRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="32" Margin="1238,344,0,0"  VerticalAlignment="Top" Width="50"/>
 
-        <TextBox x:Name="velocityTitleText" HorizontalAlignment="Left" Height="16" Margin="857,329,0,0" TextWrapping="Wrap" Text="Velocity:" VerticalAlignment="Top" Width="96" FontSize="10.667" TextAlignment="Center"/>
-        <TextBox x:Name="velocityText" HorizontalAlignment="Left" Height="16" Margin="953,329,0,0" TextWrapping="Wrap" Text="{Binding velocityOverall}" VerticalAlignment="Top" Width="131"/>
+        <TextBox x:Name="leftHandTitleText" HorizontalAlignment="Left" Height="56" Margin="857,390,0,0" TextWrapping="Wrap" Text="Left Hand Gesture" VerticalAlignment="Top" Width="152" FontSize="19" TextAlignment="Center"/>
+        <TextBox x:Name="textBox_Copy" HorizontalAlignment="Left" Height="56" Margin="1009,390,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="288"/>
 
-        <TextBox x:Name="orientationTitleText" HorizontalAlignment="Left" Height="20" Margin="857,345,0,0" TextWrapping="Wrap" Text="Orientation:" VerticalAlignment="Top" Width="96" FontSize="10.667" TextAlignment="Center"/>
-        <TextBox x:Name="orientationText" HorizontalAlignment="Left" Height="20" Margin="953,345,0,0" TextWrapping="Wrap" Text="{Binding bodyOrientation}" VerticalAlignment="Top" Width="131"/>
+        <Rectangle x:Name="leftHandOpenRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="37" Margin="1038,401,0,0" VerticalAlignment="Top" Width="50"/>
+        <Rectangle x:Name="leftHandClosedRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="37" Margin="1088,401,0,0" VerticalAlignment="Top" Width="50"/>
+        <Rectangle x:Name="leftHandLassoRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="37" Margin="1138,401,0,0"  VerticalAlignment="Top" Width="50"/>
+        <Rectangle x:Name="leftHandUnknownRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="37" Margin="1188,401,0,0"  VerticalAlignment="Top" Width="50"/>
+        <Rectangle x:Name="leftHandNotTrackedRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="37" Margin="1238,401,0,0"  VerticalAlignment="Top" Width="50"/>
 
-        <TextBox x:Name="timeTitleText" HorizontalAlignment="Left" Height="21" Margin="857,365,0,0" TextWrapping="Wrap" Text="Timer: " VerticalAlignment="Top" Width="96" FontSize="10.667" TextAlignment="Center"/>
-        <TextBox x:Name="timeText" HorizontalAlignment="Left" Height="21" Margin="953,365,0,0" TextWrapping="Wrap" Text="{Binding timerValue}" VerticalAlignment="Top" Width="131"/>
+        <TextBox x:Name="velocityTitleText" HorizontalAlignment="Left" Height="57" Margin="857,446,0,0" TextWrapping="Wrap" Text="Velocity:" VerticalAlignment="Top" Width="152" FontSize="27" TextAlignment="Center"/>
+        <TextBox x:Name="velocityText" HorizontalAlignment="Left" Height="57" Margin="1009,446,0,0" TextWrapping="Wrap" Text="{Binding velocityOverall}" VerticalAlignment="Top" Width="288"/>
+        <Rectangle x:Name="noVelocityRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="46" Margin="1021,451,0,0"  VerticalAlignment="Top" Width="42"/>
+        <Rectangle x:Name="lowVelocityRect" Fill="#FFFFFFFF"  HorizontalAlignment="Left" Height="46" Margin="1063,451,0,0"  VerticalAlignment="Top" Width="42"/>
+        <Rectangle x:Name="medLowVelocityRect" Fill="#FFFFFFFF"  HorizontalAlignment="Left" Height="46" Margin="1105,451,0,0" VerticalAlignment="Top" Width="42"/>
+        <Rectangle x:Name="mediumVelocityRect" Fill="#FFFFFFFF"  HorizontalAlignment="Left" Height="46" Margin="1147,451,0,0" VerticalAlignment="Top" Width="42"/>
+        <Rectangle x:Name="medHighVelocityRect" Fill="#FFFFFFFF"  HorizontalAlignment="Left" Height="46" Margin="1190,451,0,0"  VerticalAlignment="Top" Width="42"/>
+        <Rectangle x:Name="highVelocityRect" Fill="#FFFFFFFF"  HorizontalAlignment="Left" Height="46" Margin="1232,451,0,0" VerticalAlignment="Top" Width="42"/>
+
+        <TextBox x:Name="orientationTitleText" HorizontalAlignment="Left" Height="43" Margin="857,503,0,0" TextWrapping="Wrap" Text="Orientation:" VerticalAlignment="Top" Width="152" FontSize="24" TextAlignment="Center"/>
+        <TextBox x:Name="orientationText" HorizontalAlignment="Left" Height="43" Margin="1009,503,0,0" TextWrapping="Wrap" Text="{Binding bodyOrientation}" VerticalAlignment="Top" Width="288"/>
+
+        <TextBox x:Name="timeTitleText" HorizontalAlignment="Left" Height="49" Margin="857,546,0,0" TextWrapping="Wrap" Text="Timer: " VerticalAlignment="Top" Width="152" FontSize="27" TextAlignment="Center"/>
+        <TextBox x:Name="timeText" HorizontalAlignment="Left" Height="49" Margin="1009,546,0,0" TextWrapping="Wrap" Text="{Binding timerValue}" VerticalAlignment="Top" Width="288"/>
+       
+
 
 
 
